<resources>
    <string name="app_name">Memo</string>
    <string name="app_name_mine">Memo</string>
    <string name="delete_notes">Delete notes</string>
    <string name="add_note">Add note</string>
    <string name="intro">App Intro</string>
    <string name="done">Done</string>
    <string name="memoBodyHint">Enter memo here</string>
    <string name="memoTitleHint">Memo title</string>
    <string name="memoTitleLabel">Enter memo title</string>
    <string name="addData">Add data</string>
    <string name="delete">Delete</string>
    <string name="editMemo">Edit</string>
    <string name="favorites">Favorite notes</string>
    <string name="clearFavorites">Clear favorites</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="photos">Photos</string>
    <string name="noPermission">No Camera permission granted.</string>
    <string name="recordButton">Record</string>
    <string name="playButton">Play</string>
    <string name="stopButton">Stop</string>
    <string name="recordingString">Recording...</string>
    <string name="deleteButton">Delete</string>
    <string name="saveButton">Save</string>
    <string name="audios">Audios</string>
    <string name="title_activity_location">Map</string>
    <string name="searchViewHint">Search for memo</string>
    <string name="noMemosFound">No memos found</string>
    <string name="noFavoriteMemosFound">No favorite memos found</string>

    <string name="recording">Recording…</string>
    <string name="doneRecording">Recording is done.</string>

    <string name="playingAudio">Audio is playing</string>
    <string name="donePlaying">Audio playing is done</string>

    <string name="deletedAudio">Audio is deleted.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Share">Share</string>
</resources>
