<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/deleteNotes"
        android:title="@string/delete_notes"
        app:showAsAction="never"/>

    <item android:id="@+id/favorites"
        android:title="@string/favorites"
        app:showAsAction="never"
        />

    <item android:id="@+id/appIntro"
        android:title="@string/intro"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_icon"
        android:orderInCategory="100"
        android:title="@string/searchViewHint"
        app:showAsAction="always" />


</menu>